# Macaw

./: CMakeLists.txt  README.md
.cache/clangd/index/: client.cpp.047C9C1F62F46C95.idx  orderbook.cpp.80E11B16ACB5F1B6.idx  orderbook.hh.2F5329D7D82B623C.idx  server.cpp.F58856ED48DE5973.idx  simulator.cpp.D15AD4A5D340FC15.idx  simulator.hh.0B689CEC46B789B9.idx
config/: instrument.json
include/: orderbook.hh  simulator.hh
include/data_simulator/: client_api.hh  common.hh  server_api.hh
proto/: market_data.proto  marketdata.proto
src/: client.cpp  orderbook.cpp  server.cpp  simulator.cpp
src/server/: config.cpp  config.hh  orderbook.hh
